Fix #186 - private messages overflow into timestamp
- Added right margin to .pm

--- a/JabbR/Chat.css
+++ b/JabbR/Chat.css
@@ -252,7 +252,7 @@ li.room:hover {
     padding: 5px;
 }
 
-.notification .content {
+.notification .content, .pm .content {
     margin-right: 95px;
 }
 
